<resources>
    <string name="app_name">Погода</string>
    <string name="inputCity">Введите город</string>
    <string name="weatherInYourCity">Погода в вашем городе</string>
    <string name="getForecastForToday">Узнать на сегодня</string>
    <string name="getForecastForWeek">Узнать на неделю</string>
    <string name="requestUserInput">Пожалуйста, введите название города</string>
    <string name="checkInput">Пожалуйста, проверьте корректность введенных данных</string>
    <string name="checkCityName">Пожалуйста, введите корректное название города</string>
    <string name="connectionIssue">Пожалуйста, проверьте соединение с интернетом</string>
    <string name="geocoderError">Не удалось определить ваше местоположение, пожалуйста, попробуйте ещё раз</string>
    <string name="requestGeo">Пожалуйста, разрешите использование геолокации, чтобы определять город автоматически</string>
    <string name="weatherInCity">Погода в городе:</string>
    <string name="temperature">Температура:</string>
    <string name="feelsLike">Ощущается как:</string>
    <string name="windSpeed">Скорость ветра:</string>
    <string name="clouds">Облачность:</string>
    <string name="pressure">Атмосферное давление:</string>
    <string name="sunrise">Восход:</string>
    <string name="sunset">Закат:</string>
    <string name="forecast">Погода</string>
    <string name="dateHeader">Дата</string>
    <string name="temperatureHeader">Температура</string>
    <string name="cloudsHeader">Облачность %</string>
    <string name="windSpeedHeader">Скорость ветра</string>
    <string name="weather_picture">weather picture</string>
    <string name="ok">Да</string>
    <string name="locationDetermined">Мы автоматически определили ваше местоположение:</string>
    <string name="auto">AUTO</string>
    <string name="error500">Сервер погодных услуг не отвечает, пожалуйста, попробуйте позднее</string>
</resources>