<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForecastList">

    <TextView
        android:id="@+id/forecastHeader"
        style="@style/Text.MainTextView"
        android:layout_marginTop="16dp"
        android:text="@string/forecast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/forecastList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listHeader" />

    <LinearLayout
        android:id="@+id/listHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forecastHeader">

        <TextView
            android:id="@+id/tvDateHeader"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:text="@string/dateHeader"
            android:textSize="16sp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tvTemperatureHeader"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:text="@string/temperatureHeader"
            android:textSize="16sp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tvCloudsHeader"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:text="@string/cloudsHeader"
            android:textSize="16sp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tvWindSpeedHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/windSpeedHeader"
            android:textSize="16sp"
            android:layout_weight="1"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>